number & string methods

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <p id="demo"></p>
+    <button onclick="myFunction()">Press me!</button>
+    <p id="avengersOpinion">Who's the strongest Avenger? Peter Parker</p>
     <script src="./app.js"></script>
 </body>
 </html>
